--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
     <title>오전, 오늘의 전시</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap" rel="stylesheet">
 
@@ -18,18 +19,18 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
 
     <script>
         function sign_out() {
-            $.removeCookie('mytoken', {
-                path: '/'
-            });
+            $.removeCookie('mytoken', { path: '/' });
             alert('로그아웃되었습니다.')
             window.location.href = "/"
         }
 
-        window.onload = function() {
+        window.onload = function () {
             checking_cookie()
             showinfo()
         };
@@ -59,7 +60,7 @@
                 type: "GET",
                 url: "/info",
                 data: {},
-                success: function(response) {
+                success: function (response) {
                     let shows = response['all_info']
                     for (let i = 0; i < 15; i++) {
                         let title = shows[i]['title']
@@ -75,42 +76,48 @@
                 }
             })
         }
+
     </script>
+
     <style>
         * {
             font-family: 'Noto Serif KR', serif;
             color: #68665f;
         }
+
         /* .nav-link{
             color: #68665f;
             font-size: large;
         } */
-        
+
         body {
             background-color: rgb(253, 253, 252);
         }
-        
+
         .title {
             display: block;
             width: 100px;
             margin: auto;
         }
-        
+
         #wrap {
             height: 100vh;
         }
-        
+
         #header {
+
             text-align: center;
             padding: 20px;
+
             height: 10vh;
             min-height: 50px;
         }
-        
+
         #container {
             height: 90vh;
+
         }
-        
+
         #aside {
             float: left;
             width: 15%;
@@ -118,26 +125,29 @@
             border-right: rgb(202, 202, 202) solid 1px;
             text-decoration: none;
         }
-        
+
         #contents {
             float: left;
+
             width: 85%;
             height: 100%;
+
             white-space: nowrap;
             overflow-x: auto;
         }
-        
+
         .exhibits-link {
             width: 40vh;
             margin: 20vh 100px 0;
             display: inline-block;
         }
-        
+
         #contents .exhibits-link img {
             width: 40vh;
             object-fit: cover;
+
         }
-        
+
         .nav-link {
             color: #68665f;
         }
@@ -161,9 +171,7 @@
                     <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
                     <br>
                     <br>
-                    <a class="nav-link active" aria-current="page" href="/show">인기 전시</a>
-                    <a class="nav-link" href="#">전시 검색</a>
-                    <a class="nav-link" href="#">종료 임박 전시</a>
+                    <a class="nav-link active" aria-current="page" href="/show">전시 목록</a>
                     <br>
                     <a class="nav-link" href="/login" id="login">로그인</a>
                     <a class="nav-link" href="/mypage" id="mypage">마이페이지</a>
@@ -172,7 +180,7 @@
             </div>
             <!-- 전시 목록 -->
             <div id="contents">
-
+                
             </div>
         </div>
     </div>
