--- a/templates/login.html
+++ b/templates/login.html
@@ -25,43 +25,43 @@
         * {
             font-family: 'Noto Serif KR', serif;
         }
-        
+
         body {
             background-color: rgb(253, 253, 252);
             min-height: 100vh;
         }
-        
+
         .section {
             padding: 1rem 1.5rem;
             max-width: 750px;
             margin: auto;
         }
-        
+
         .title {
             font-weight: 800;
             font-size: 5rem;
         }
-        
+
         .subtitle {
             font-size: 2rem;
         }
-        
+
         .is-sparta {
             color: #68665f !important;
         }
-        
+
         .button.is-sparta {
             background-color: #969492;
             border-color: transparent;
             color: #fff !important;
         }
-        
+
         .button.is-sparta.is-outlined {
             background-color: transparent;
             border-color: #68665f;
             color: #68665f !important;
         }
-        
+
         .help {
             color: gray;
         }
@@ -97,11 +97,9 @@
                     username_give: username,
                     password_give: password
                 },
-                success: function(response) {
+                success: function (response) {
                     if (response['result'] == 'success') {
-                        $.cookie('mytoken', response['token'], {
-                            path: '/'
-                        });
+                        $.cookie('mytoken', response['token'], { path: '/' });
                         window.location.replace("/")
                     } else {
                         alert(response['msg'])
@@ -109,8 +107,6 @@
                 }
             });
         }
-
-
 
         function sign_up() {
             let username = $("#input-username").val()
@@ -156,7 +152,7 @@
                     username_give: username,
                     password_give: password
                 },
-                success: function(response) {
+                success: function (response) {
                     alert("회원가입을 축하드립니다!")
                     window.location.replace("/login")
                 }
@@ -204,7 +200,7 @@
                 data: {
                     username_give: username
                 },
-                success: function(response) {
+                success: function (response) {
 
                     if (response["exists"]) {
                         $("#help-id").text("이미 존재하는 아이디입니다.").removeClass("is-safe").addClass("is-danger")
@@ -253,8 +249,9 @@
                                     <input id="input-password" class="input" type="password" placeholder="비밀번호">
                                     <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                                 </div>
-                                <p id="help-password" class="help is-hidden">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도 사용 가능합니다.
-                                </p>
+                                <p id="help-password" class="help is-hidden">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요.
+                                    특수문자(!@#$%^&*)도 사용
+                                    가능합니다.</p>
                             </div>
 
 
@@ -280,7 +277,8 @@
                             <div class="mb-5">
                                 <div class="field">
                                     <div class="control has-icons-left" style="width:100%">
-                                        <input id="input-password2" class="input" type="password" placeholder="비밀번호 재입력">
+                                        <input id="input-password2" class="input" type="password"
+                                            placeholder="비밀번호 재입력">
                                         <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                                     </div>
                                     <p id="help-password2" class="help is-hidden">비밀번호를 다시 한 번 입력해주세요.</p>
