--- a/templates/show.html
+++ b/templates/show.html
@@ -178,11 +178,11 @@
                         alt="Card image cap"
                       />
                       <div class="card-body">
-                        <a class="nav-link" href=" {{ show.title_fix }} ">
+                        <a class="nav-link">
                           {{ show.title }}
                         </a>
                         <p class="card-text nav-link">{{ show['date'] }}</p>
-                        <a class="nav-link" href=" {{ show.location_url }} ">
+                        <a class="nav-link">
                           {{ show.location}}
                         </a>
                       </div>
