--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,11 @@
         .nav-link {
             color: #68665f;
         }
+
+        .logo{
+            width: 80%;
+            margin: 0 auto 0 10px;
+        }
     </style>
 
 </head>
@@ -168,6 +173,7 @@
             <div id="aside">
                 <nav class="nav flex-column" style="color: #68665f;">
                     <br>
+                    <img class="logo" src="/static/logo.png" alt="logo">
                     <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
                     <br>
                     <br>
