--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -276,6 +276,11 @@
             alert('로그아웃되었습니다.')
             window.location.href = "/"
         }
+
+        .logo{
+            width: 80%;
+            margin: 0 auto 0 10px;
+        }
     </script>
 
 </head>
@@ -295,6 +300,7 @@
             <div id="aside">
                 <nav class="nav flex-column" style="color: #68665f;">
                     <br>
+                    <img class="logo" src="/static/logo.png" alt="logo">
                     <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
                     <br>
                     <br>
