--- a/templates/show.html
+++ b/templates/show.html
@@ -139,6 +139,11 @@
             justify-content: space-evenly;
             align-items: baseline;
         }
+
+        .logo{
+            width: 80%;
+            margin: 0 auto 0 10px;
+        }
     </style>
 
 </head>
@@ -156,6 +161,7 @@
             <div id="aside">
                 <nav class="nav flex-column" style="color: #68665f;">
                     <br>
+                    <img class="logo" src="/static/logo.png" alt="logo">
                     <a class="nav-link" href="/" style="font-size: 30px;">오늘의 전시</a>
                     <br>
                     <br>
