og 이미지 수정버전
배포 완료 !

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,9 @@
 
     <!-- Webpage Title -->
     <title>Log In</title>
+    <meta property="og:title" content="오늘의 전시. 오 전" />
+    <meta property="og:description" content="전시회 정보 및 기록 작성 사이트입니다." />
+    <meta property="og:image" content="{{ url_for('static', filename='logo.png') }}" />
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
